--- a/style/css/all.css
+++ b/style/css/all.css
@@ -1,109 +1,67 @@
-/* http://meyerweb.com/eric/tools/css/reset/ 
-   v2.0 | 20110126
-   License: none (public domain)
-*/
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed,
-figure, figcaption, footer, header, hgroup,
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  font-size: 100%;
-  font: inherit;
-  vertical-align: baseline;
-}
-
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section {
-  display: block;
-}
-
+@charset "UTF-8";
 body {
-  line-height: 1;
-}
-
-ol, ul {
-  list-style: none;
-}
-
-blockquote, q {
-  quotes: none;
-}
-
-blockquote:before, blockquote:after,
-q:before, q:after {
-  content: "";
-  content: none;
-}
-
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
-}
-
-body {
-  font-size: 16px;
+  font-weight: 700;
 }
 
 .bg-img {
   background-image: url("../../images/arthur-volkers-GX542ehZwSk-unsplash 1.png");
 }
 
-header {
-  padding: 2rem;
+.top-middle {
+  top: 50%;
+  margin-top: -80px;
 }
 
-a:link, a:visited {
-  color: #FFCC00;
-}
-a:hover, a:focus, a:active, a.active {
-  color: #FFCC00;
-}
-
-.my-3 {
-  margin: 1rem 0;
+.troubled {
+  height: 100vh;
+  background-image: url(../../images/困擾\ 1.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
 }
 
-.my-4 {
-  margin: 1.5rem 0;
+.f-img {
+  width: 35%;
 }
 
-.my-5 {
-  margin: 2rem 0;
+.toBig {
+  -webkit-animation: enlarge 1.5s ease-in-out;
+          animation: enlarge 1.5s ease-in-out;
 }
 
-.d-flex {
-  display: flex;
+@-webkit-keyframes enlarge {
+  from {
+    transform: scale(0);
+  }
+  to {
+    transform: scale(1);
+  }
 }
 
-.row-reverse {
-  flex-direction: row-reverse;
+@keyframes enlarge {
+  from {
+    transform: scale(0);
+  }
+  to {
+    transform: scale(1);
+  }
+}
+.section2 {
+  height: 100vh;
+  overflow: hidden;
+  max-width: 100%;
 }
 
-.column-reverse {
-  flex-direction: column-reverse;
+.loop {
+  display: inline-block;
+  font-family: "Laser Corps 3D";
+  font-size: 5rem;
+  color: transparent;
+  white-space: nowrap;
+  height: 100%;
+  -webkit-text-stroke: 1px white;
 }
 
-.border-1 {
-  border: 1px solid #000;
-}
-
-.l-nav {
-  padding: 0;
-  margin: 0;
-}
-
-p {
-  color: #FFCC00;
+.loop > span {
+  display: inline-block;
 }/*# sourceMappingURL=all.css.map */
