--- a/style/css/bootstrap-reboot.css
+++ b/style/css/bootstrap-reboot.css
@@ -6,56 +6,56 @@
  * Forked from Normalize.css, licensed MIT (https://github.com/necolas/normalize.css/blob/master/LICENSE.md)
  */
 :root {
-  --bs-blue: #0d6efd;
-  --bs-indigo: #6610f2;
-  --bs-purple: #6f42c1;
-  --bs-pink: #d63384;
+  --bs-blue: #0000C5;
+  --bs-indigo: #B490CA;
+  --bs-purple: #9C71EC;
+  --bs-pink: #FF99CC;
   --bs-red: #dc3545;
-  --bs-orange: #fd7e14;
-  --bs-yellow: #ffc107;
+  --bs-orange: #FFB400;
+  --bs-yellow: #FFCC00;
   --bs-green: #198754;
   --bs-teal: #20c997;
-  --bs-cyan: #0dcaf0;
+  --bs-cyan: #5EE7DF;
   --bs-white: #fff;
-  --bs-gray: #6c757d;
-  --bs-gray-dark: #343a40;
-  --bs-gray-100: #f8f9fa;
-  --bs-gray-200: #e9ecef;
-  --bs-gray-300: #dee2e6;
-  --bs-gray-400: #ced4da;
-  --bs-gray-500: #adb5bd;
-  --bs-gray-600: #6c757d;
-  --bs-gray-700: #495057;
-  --bs-gray-800: #343a40;
-  --bs-gray-900: #212529;
-  --bs-primary: #0d6efd;
-  --bs-secondary: #6c757d;
+  --bs-gray: #545963;
+  --bs-gray-dark: #0F123D;
+  --bs-gray-100: #f5f5f5;
+  --bs-gray-200: #eee;
+  --bs-gray-300: #caccd2;
+  --bs-gray-400: #a6aab4;
+  --bs-gray-500: #6f7585;
+  --bs-gray-600: #545963;
+  --bs-gray-700: #36393f;
+  --bs-gray-800: #1f1f1f;
+  --bs-gray-900: #0F123D;
+  --bs-primary: #FFCC00;
+  --bs-secondary: #FFB400;
   --bs-success: #198754;
-  --bs-info: #0dcaf0;
-  --bs-warning: #ffc107;
+  --bs-info: #5EE7DF;
+  --bs-warning: #0000C5;
   --bs-danger: #dc3545;
-  --bs-light: #f8f9fa;
-  --bs-dark: #212529;
-  --bs-primary-rgb: 13, 110, 253;
-  --bs-secondary-rgb: 108, 117, 125;
+  --bs-light: #fff;
+  --bs-dark: #0F123D;
+  --bs-primary-rgb: 255, 204, 0;
+  --bs-secondary-rgb: 255, 180, 0;
   --bs-success-rgb: 25, 135, 84;
-  --bs-info-rgb: 13, 202, 240;
-  --bs-warning-rgb: 255, 193, 7;
+  --bs-info-rgb: 94, 231, 223;
+  --bs-warning-rgb: 0, 0, 197;
   --bs-danger-rgb: 220, 53, 69;
-  --bs-light-rgb: 248, 249, 250;
-  --bs-dark-rgb: 33, 37, 41;
+  --bs-light-rgb: 255, 255, 255;
+  --bs-dark-rgb: 15, 18, 61;
   --bs-white-rgb: 255, 255, 255;
   --bs-black-rgb: 0, 0, 0;
-  --bs-body-color-rgb: 33, 37, 41;
+  --bs-body-color-rgb: 15, 18, 61;
   --bs-body-bg-rgb: 255, 255, 255;
-  --bs-font-sans-serif: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  --bs-font-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+  --bs-font-sans-serif: "Noto Sans", "Liberation Sans", sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  --bs-font-monospace: "Noto Sans", sans-serif;
   --bs-gradient: linear-gradient(180deg, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0));
   --bs-body-font-family: var(--bs-font-sans-serif);
   --bs-body-font-size: 1rem;
   --bs-body-font-weight: 400;
   --bs-body-line-height: 1.5;
-  --bs-body-color: #212529;
+  --bs-body-color: #0F123D;
   --bs-body-bg: #fff;
 }
 
@@ -99,6 +99,7 @@ hr:not([size]) {
 h6, h5, h4, h3, h2, h1 {
   margin-top: 0;
   margin-bottom: 0.5rem;
+  font-family: "Noto Sans", sans-serif;
   font-weight: 500;
   line-height: 1.2;
 }
@@ -230,11 +231,11 @@ sup {
 }
 
 a {
-  color: #0d6efd;
+  color: #FFCC00;
   text-decoration: underline;
 }
 a:hover {
-  color: #0a58ca;
+  color: #cca300;
 }
 
 a:not([href]):not([class]), a:not([href]):not([class]):hover {
@@ -267,7 +268,7 @@ pre code {
 
 code {
   font-size: 0.875em;
-  color: #d63384;
+  color: #FF99CC;
   word-wrap: break-word;
 }
 a > code {
@@ -278,7 +279,7 @@ kbd {
   padding: 0.2rem 0.4rem;
   font-size: 0.875em;
   color: #fff;
-  background-color: #212529;
+  background-color: #0F123D;
   border-radius: 0.2rem;
 }
 kbd kbd {
@@ -304,7 +305,7 @@ table {
 caption {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
-  color: #6c757d;
+  color: #545963;
   text-align: left;
 }
 
