--- a/style/css/bootstrap-grid.css
+++ b/style/css/bootstrap-grid.css
@@ -32,7 +32,7 @@
   --bs-success: #198754;
   --bs-info: #5EE7DF;
   --bs-warning: #0000C5;
-  --bs-danger: #dc3545;
+  --bs-danger: #9C71EC;
   --bs-light: #fff;
   --bs-dark: #0F123D;
   --bs-primary-rgb: 255, 204, 0;
@@ -40,7 +40,7 @@
   --bs-success-rgb: 25, 135, 84;
   --bs-info-rgb: 94, 231, 223;
   --bs-warning-rgb: 0, 0, 197;
-  --bs-danger-rgb: 220, 53, 69;
+  --bs-danger-rgb: 156, 113, 236;
   --bs-light-rgb: 255, 255, 255;
   --bs-dark-rgb: 15, 18, 61;
   --bs-white-rgb: 255, 255, 255;
