--- a/style/scss/_variables.scss
+++ b/style/scss/_variables.scss
@@ -71,7 +71,7 @@ $secondary: $orange !default;
 $success: $green !default;
 $info: $cyan !default;
 $warning: $blue !default;
-$danger: $red !default;
+$danger: $purple !default;
 $light: $white !default;
 $dark: $gray-900 !default;
 // scss-docs-end theme-color-variables
