--- a/style/scss/all.scss
+++ b/style/scss/all.scss
@@ -4,31 +4,75 @@
 // 全域變數&mixin
 
 
-// base*********************************************
+// base******************************************************************************
 body {
     font-weight: 700;
     background-image: url("../../images/arthur-volkers-GX542ehZwSk-unsplash\ 1.png");
 }
-
+header{
+    padding: 2.5rem 2rem;
+}
+// section******************************************************************************
 section {
     max-width: 100%;
-    height: 100vh;
-    box-sizing: border-box;
-    padding: 2rem;
+    padding: 3rem .5rem 8rem;
+    @media (max-width: 992px) {
+        padding: 3rem .5rem 5rem;
+    }
+        
+    
 }
+.section2 {
+    height: 100vh;
+    flex: 1 0 0;
+    figure{
+        max-width: 50%;
+    }
+}
+.section4{
+    background-image: url(../../images/Rectangle\ 9.svg);
+    background-repeat: no-repeat;
+    background-position: center;
 
-// layout*********************************************
-
+}
 .section6 {
     // background-image: url(../../images/);
+    
+    padding-right: 2rem;
+    padding-left: 2rem;
+    main.card-item{
+        height: 100vh;
+        .card{
+            position: absolute;
+            max-width: 50%;
+        }
+        .card:nth-child(1) {
+            transform: rotate(-5deg);
+            top: 0;
+            left: 0;
+        }
+    
+        .card:last-child {
+            transform: rotate(6.5deg);
+            right: 0;
+            bottom: 0;
+        }
+    }
 }
 
 .section7 {
 
-    // background-image: url(../../images/Icon/Vector1.png);
-    // background-repeat: no-repeat;
-    // background-size: cover;
-    // background-position: center;
+    >.pic {
+        width: 100%;
+        margin: 0 auto;
+        text-align: center;
+        overflow-x: hidden;
+
+        img {
+            width: 120%;
+        }
+    }
+
     main {
         position: absolute;
         top: -1%;
@@ -36,17 +80,19 @@ section {
         left: 50%;
         width: 100%;
         transform: translate(-50%);
+
+        .pic {
+            width: 30%;
+
+            img {
+                width: 100%;
+            }
+        }
     }
 
 }
 
-
-// main**********************************************
-.ZigZag {
-    span {
-        margin-top: -15px;
-    }
-}
+// module*******************************************************************************
 
 .top-middle {
     top: 50%;
@@ -77,53 +123,53 @@ section {
 
 .after-arrow {
     position: relative;
-}
 
-.after-arrow::after {
-    content: " ";
-    background: url(../../images/Icon/Group\ 4.svg) no-repeat center;
-    background-size: contain;
-    display: block;
-    width: 8rem;
-    height: 8rem;
-    position: absolute;
-    left: 105%;
-    top: 50%;
-    transform: translateY(-100%);
-}
-
-
-
-
-// module*********************************************
-.f-img {
-    width: 35%;
-}
-
-.trophy-card-bg{
-    background:linear-gradient(to right,#5EE7DF,#B490CA) ;
+    &::after {
+        content: " ";
+        background: url(../../images/Icon/Group\ 4.svg) no-repeat center;
+        background-size: contain;
+        display: block;
+        width: 8rem;
+        height: 8rem;
+        position: absolute;
+        left: 105%;
+        top: 50%;
+        transform: translateY(-100%);
+    }
 
 }
-.box-shadow-linear{
-    
-}
-.card-header{
-    padding: 4px;
-    h5.card-title{
-        top: -3%;
-        left: -1%;
-        
+
+.ZigZag {
+    span {
+        margin-top: -15px;
     }
 }
 
-.rounded-20{
+.trophy-card-bg {
+    background: linear-gradient(to right, #5EE7DF, #B490CA);
+
+}
+
+.box-shadow-linear {}
+
+.card-body {
+    h5.card-title {
+        padding: .25rem;
+        top: 0;
+        left: 0;
+    }
+}
+
+.rounded-20 {
     border-radius: 20px !important;
 }
-.list-group-disc{
+
+.list-group-disc {
     list-style-type: disc;
 }
-// animation*****************************************
-.toBig {
+
+// animation**************************************************************************
+.ani-toBig {
     animation: enlarge 1.5s ease-in-out;
 }
 
@@ -136,4 +182,3 @@ section {
         transform: scale(1);
     }
 }
-
