--- a/style/scss/all.scss
+++ b/style/scss/all.scss
@@ -116,6 +116,9 @@ section {
     background-image: url(../../images/Rectangle\ 9.svg);
     background-repeat: no-repeat;
     background-position: center;
+    .card{
+        max-width: 30%;
+    }
 }
 .section5{
     .card{
