--- a/style/css/bootstrap-utilities.css
+++ b/style/css/bootstrap-utilities.css
@@ -547,8 +547,32 @@
   width: 100vw !important;
 }
 
+.vw-75 {
+  width: 75vw !important;
+}
+
+.vw-50 {
+  width: 50vw !important;
+}
+
+.vw-25 {
+  width: 25vw !important;
+}
+
 .min-vw-100 {
   min-width: 100vw !important;
+}
+
+.min-vw-75 {
+  min-width: 75vw !important;
+}
+
+.min-vw-50 {
+  min-width: 50vw !important;
+}
+
+.min-vw-25 {
+  min-width: 25vw !important;
 }
 
 .h-25 {
@@ -579,8 +603,32 @@
   height: 100vh !important;
 }
 
+.vh-75 {
+  height: 75vh !important;
+}
+
+.vh-50 {
+  height: 50vh !important;
+}
+
+.vh-25 {
+  height: 25vh !important;
+}
+
 .min-vh-100 {
   min-height: 100vh !important;
+}
+
+.min-vh-75 {
+  min-height: 75vh !important;
+}
+
+.min-vh-50 {
+  min-height: 50vh !important;
+}
+
+.min-vh-25 {
+  min-height: 25vh !important;
 }
 
 .flex-fill {
