--- a/style/scss/all.scss
+++ b/style/scss/all.scss
@@ -62,8 +62,11 @@ header {
 .box-shadow-linear {}
 
 
-.rounded-20 {
-    border-radius: 20px !important;
+.rounded {
+    &-20 {
+        border-radius: 20px !important;
+    }
+
 }
 
 .list-group-disc {
@@ -83,22 +86,30 @@ header {
     }
 }
 
-@keyframes  upDown {
-    0% { top: 0;}
+@keyframes upDown {
+    0% {
+        top: 0;
+    }
 
-    50% {top: -10px;}
+    50% {
+        top: -10px;
+    }
 
-    100% {top: 0;}
+    100% {
+        top: 0;
+    }
 }
 
 
 // section******************************************************************************
 section {
-    max-width: 100%;
-    padding: 3rem .5rem 8rem;
-
-    @include media-breakpoint-down(lg) {
-        padding: 3rem .5rem 5rem;
+    padding: 1.5rem .5rem 1rem;
+    @include media-breakpoint-up(md) {
+        padding: 3rem .5rem 3rem;
+    }
+    @include media-breakpoint-up(lg) {
+        max-width: 100%;
+        padding: 3rem .5rem 8rem;
     }
 
 }
@@ -106,6 +117,7 @@ section {
 .section2 {
     height: 100vh;
     flex: 1 0 0;
+
     figure {
         max-width: 50%;
         animation: enlarge 1.5s ease-in-out;
@@ -116,33 +128,81 @@ section {
     background-image: url(../../images/Rectangle\ 9.svg);
     background-repeat: no-repeat;
     background-position: center;
-    .card{
-        max-width: 30%;
+
+    main {
+        width: 50%;
+
+        .card {
+            max-width: 100%;
+            margin: .75rem;
+        }
+        @include media-breakpoint-up(md) {
+            width: 100%;
+            .card {
+                max-width: 30%;
+            }
+        }
+        @include media-breakpoint-up(lg) {
+            width: 75%;
+
+            .card {
+                max-width: 30%;
+            }
+        }
     }
+
 }
-.section5{
-    .card{
-        flex:0 1 20%;
-        position: relative;
-    
-        &:not(:last-child)::after {
-            content: " ";
-            background: url(../../images/Icon/Group\ 4.svg) no-repeat center;
-            background-size: contain;
-            display: inline-block;
-            width: 5vw;
-            height: 5vw;
-            position: absolute;
-            left: 105%;
-            top: 45%;
-            transform: translateY(-100%);
+
+.section5 {
+    main{
+        width: 75%;
+        @include media-breakpoint-up(sm){
+            width: 100%;
+        }
+    }
+    .card {
+        @include media-breakpoint-up(sm){
+            flex: 0 1 40%;
+            position: relative;
+            &:not(:nth-child(2n))::after {
+                content: " ";
+                background: url(../../images/Icon/Group\ 4.svg) no-repeat center;
+                background-size: contain;
+                display: inline-block;
+                width: 5vw;
+                height: 5vw;
+                position: absolute;
+                left: 105%;
+                top: 45%;
+                transform: translateY(-100%);
+            }
+        }
+        
+        @include media-breakpoint-up(md){
+            flex: 0 1 20%;
+            position: relative;
+
+            &:not(:last-child)::after {
+                content: " ";
+                background: url(../../images/Icon/Group\ 4.svg) no-repeat center;
+                background-size: contain;
+                display: inline-block;
+                width: 5vw;
+                height: 5vw;
+                position: absolute;
+                left: 105%;
+                top: 45%;
+                transform: translateY(-100%);
+            }
         }
     }
 }
+
 .section6 {
     // background-image: url(../../images/);
     padding-right: 2rem;
     padding-left: 2rem;
+
     main {
         margin: 0 auto;
         height: 50vw;
@@ -164,6 +224,7 @@ section {
                     padding: .5rem 0.75rem;
                 }
             }
+
             &:nth-child(1) {
                 transform: rotate(-5deg);
                 top: 0;
@@ -229,8 +290,10 @@ section {
                 margin-top: 3rem;
                 position: relative;
                 animation: upDown 1.25s ease-in-out infinite;
+
                 &:nth-child(1) {
                     transform: rotate(0);
+
                     h5.card-title {
                         margin-top: -2%;
                         margin-left: -3%;
@@ -239,6 +302,7 @@ section {
 
                 &:last-child {
                     transform: rotate(0);
+
                     h5.card-title {
                         margin-top: -2%;
                         margin-right: -3%;
@@ -247,11 +311,13 @@ section {
             }
         }
     }
-    @include media-breakpoint-down(md){
+
+    @include media-breakpoint-down(md) {
         padding-left: 1rem;
         padding-right: 1rem;
     }
-    @include media-breakpoint-down(sm){
+
+    @include media-breakpoint-down(sm) {
         padding-left: .5rem;
         padding-right: .5rem;
     }
@@ -287,4 +353,8 @@ section {
         }
     }
 
+}
+
+.btn-primary:hover {
+    background-color: #FFB400;
 }
