--- a/style/css/all.css
+++ b/style/css/all.css
@@ -8169,6 +8169,21 @@ textarea.form-control-lg {
   .d-sm-none {
     display: none !important;
   }
+  .w-sm-25 {
+    width: 25% !important;
+  }
+  .w-sm-50 {
+    width: 50% !important;
+  }
+  .w-sm-75 {
+    width: 75% !important;
+  }
+  .w-sm-100 {
+    width: 100% !important;
+  }
+  .w-sm-auto {
+    width: auto !important;
+  }
   .flex-sm-fill {
     flex: 1 1 auto !important;
   }
@@ -8811,6 +8826,21 @@ textarea.form-control-lg {
   }
   .d-md-none {
     display: none !important;
+  }
+  .w-md-25 {
+    width: 25% !important;
+  }
+  .w-md-50 {
+    width: 50% !important;
+  }
+  .w-md-75 {
+    width: 75% !important;
+  }
+  .w-md-100 {
+    width: 100% !important;
+  }
+  .w-md-auto {
+    width: auto !important;
   }
   .flex-md-fill {
     flex: 1 1 auto !important;
@@ -9455,6 +9485,21 @@ textarea.form-control-lg {
   .d-lg-none {
     display: none !important;
   }
+  .w-lg-25 {
+    width: 25% !important;
+  }
+  .w-lg-50 {
+    width: 50% !important;
+  }
+  .w-lg-75 {
+    width: 75% !important;
+  }
+  .w-lg-100 {
+    width: 100% !important;
+  }
+  .w-lg-auto {
+    width: auto !important;
+  }
   .flex-lg-fill {
     flex: 1 1 auto !important;
   }
@@ -10098,6 +10143,21 @@ textarea.form-control-lg {
   .d-xl-none {
     display: none !important;
   }
+  .w-xl-25 {
+    width: 25% !important;
+  }
+  .w-xl-50 {
+    width: 50% !important;
+  }
+  .w-xl-75 {
+    width: 75% !important;
+  }
+  .w-xl-100 {
+    width: 100% !important;
+  }
+  .w-xl-auto {
+    width: auto !important;
+  }
   .flex-xl-fill {
     flex: 1 1 auto !important;
   }
@@ -10740,6 +10800,21 @@ textarea.form-control-lg {
   }
   .d-xxl-none {
     display: none !important;
+  }
+  .w-xxl-25 {
+    width: 25% !important;
+  }
+  .w-xxl-50 {
+    width: 50% !important;
+  }
+  .w-xxl-75 {
+    width: 75% !important;
+  }
+  .w-xxl-100 {
+    width: 100% !important;
+  }
+  .w-xxl-auto {
+    width: auto !important;
   }
   .flex-xxl-fill {
     flex: 1 1 auto !important;
@@ -11510,6 +11585,7 @@ section {
   background-image: url(../../images/Rectangle\ 9.svg);
   background-repeat: no-repeat;
   background-position: center;
+  background-size: cover;
 }
 .section4 main {
   width: 50%;
@@ -11535,15 +11611,10 @@ section {
   }
 }
 
-.section5 main {
-  width: 75%;
+.section5 .card {
+  flex: 0 1 auto;
 }
-@media (min-width: 576px) {
-  .section5 main {
-    width: 100%;
-  }
-}
-@media (min-width: 576px) {
+@media (min-width: 768px) {
   .section5 .card {
     flex: 0 1 40%;
     position: relative;
@@ -11553,15 +11624,15 @@ section {
     background: url(../../images/Icon/Group\ 4.svg) no-repeat center;
     background-size: contain;
     display: inline-block;
-    width: 5vw;
-    height: 5vw;
+    width: 10vw;
+    height: 8vw;
     position: absolute;
-    left: 105%;
+    left: 101%;
     top: 45%;
     transform: translateY(-100%);
   }
 }
-@media (min-width: 768px) {
+@media (min-width: 992px) {
   .section5 .card {
     flex: 0 1 20%;
     position: relative;
@@ -11574,9 +11645,23 @@ section {
     width: 5vw;
     height: 5vw;
     position: absolute;
-    left: 105%;
-    top: 45%;
+    left: 100%;
+    top: 40%;
     transform: translateY(-100%);
+  }
+}
+@media (min-width: 1200px) {
+  .section5 .card:not(:last-child)::after {
+    position: absolute;
+    width: 4vw;
+    height: 4vw;
+    left: 100%;
+    top: 38%;
+  }
+}
+@media (min-width: 1400px) {
+  .section5 .card:not(:last-child)::after {
+    top: 45%;
   }
 }
 
@@ -11700,14 +11785,19 @@ section {
   top: -1%;
   margin-top: 20%;
   left: 50%;
-  width: 100%;
   transform: translate(-50%);
 }
 .section7 main .pic {
   width: 30%;
+  border-radius: 50%;
+  overflow: hidden;
 }
 .section7 main .pic img {
   width: 100%;
+  transition: all 0.5s;
+}
+.section7 main .pic img:hover {
+  transform: scale(1.15);
 }
 
 .btn-primary:hover {
