--- a/style/scss/all.scss
+++ b/style/scss/all.scss
@@ -104,9 +104,11 @@ header {
 // section******************************************************************************
 section {
     padding: 1.5rem .5rem 1rem;
+
     @include media-breakpoint-up(md) {
         padding: 3rem .5rem 3rem;
     }
+
     @include media-breakpoint-up(lg) {
         max-width: 100%;
         padding: 3rem .5rem 8rem;
@@ -124,10 +126,12 @@ section {
     }
 }
 
+// 網頁區塊 4：三大主題-------------------------------------------
 .section4 {
     background-image: url(../../images/Rectangle\ 9.svg);
     background-repeat: no-repeat;
     background-position: center;
+    background-size: cover;
 
     main {
         width: 50%;
@@ -136,12 +140,15 @@ section {
             max-width: 100%;
             margin: .75rem;
         }
+
         @include media-breakpoint-up(md) {
             width: 100%;
+
             .card {
                 max-width: 30%;
             }
         }
+
         @include media-breakpoint-up(lg) {
             width: 75%;
 
@@ -153,32 +160,30 @@ section {
 
 }
 
+// 網頁區塊 5： 活動說明-------------------------------------------
 .section5 {
-    main{
-        width: 75%;
-        @include media-breakpoint-up(sm){
-            width: 100%;
-        }
-    }
     .card {
-        @include media-breakpoint-up(sm){
+        flex: 0 1 auto;
+
+        @include media-breakpoint-up(md) {
             flex: 0 1 40%;
             position: relative;
+
             &:not(:nth-child(2n))::after {
                 content: " ";
                 background: url(../../images/Icon/Group\ 4.svg) no-repeat center;
                 background-size: contain;
                 display: inline-block;
-                width: 5vw;
-                height: 5vw;
+                width: 10vw;
+                height: 8vw;
                 position: absolute;
-                left: 105%;
+                left: 101%;
                 top: 45%;
                 transform: translateY(-100%);
             }
         }
-        
-        @include media-breakpoint-up(md){
+
+        @include media-breakpoint-up(lg) {
             flex: 0 1 20%;
             position: relative;
 
@@ -190,14 +195,32 @@ section {
                 width: 5vw;
                 height: 5vw;
                 position: absolute;
-                left: 105%;
-                top: 45%;
+                left: 100%;
+                top: 40%;
                 transform: translateY(-100%);
+            }
+        }
+
+        @include media-breakpoint-up(xl) {
+
+            &:not(:last-child)::after {
+                position: absolute;
+                width: 4vw;
+                height: 4vw;
+                left: 100%;
+                top: 38%;
+            }
+        }
+        @include media-breakpoint-up(xxl) {
+
+            &:not(:last-child)::after {
+                top: 45%;
             }
         }
     }
 }
 
+//網頁區塊 6：獎項設計 -------------------------------------------
 .section6 {
     // background-image: url(../../images/);
     padding-right: 2rem;
@@ -323,6 +346,7 @@ section {
     }
 }
 
+// 網頁區塊 7：贊助單位-------------------------------------------
 .section7 {
 
     >.pic {
@@ -341,15 +365,23 @@ section {
         top: -1%;
         margin-top: 20%;
         left: 50%;
-        width: 100%;
         transform: translate(-50%);
 
         .pic {
             width: 30%;
+            border-radius: 50%;
+            overflow: hidden;
 
             img {
                 width: 100%;
+                transition: all .5s;
+
+                &:hover {
+                    transform: scale(1.15);
+
+                }
             }
+
         }
     }
 
