section-1刪除，確定有問題

--- a/style/css/all.css
+++ b/style/css/all.css
@@ -11471,7 +11471,7 @@ body {
   background-image: url("../../images/arthur-volkers-GX542ehZwSk-unsplash 1.png");
 }
 
-nav {
+header {
   padding: 0.5rem 2rem;
 }
 
