--- a/style/scss/all.scss
+++ b/style/scss/all.scss
@@ -14,7 +14,7 @@ body {
     background-image: url("../../images/arthur-volkers-GX542ehZwSk-unsplash\ 1.png");
 }
 
-nav {
+header {
     padding: .5rem 2rem;
 }
 
